--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "homepage": "https://mathildegeh.github.io/madplan",
   "name": "madplan",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
