--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://mathildegeh.github.io/",
+  "homepage": "https://mathildegeh.github.io/madplan",
   "name": "madplan",
   "version": "0.1.0",
   "private": false,
