--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "chokidar": "^3.5.3",
     "csv-parser": "^3.0.0",
     "gh-pages": "^4.0.0",
+    "mysql2": "^3.6.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
